[gd_scene load_steps=25 format=3 uid="uid://3b6k14ctumpc"]

[ext_resource type="Texture2D" uid="uid://umjhgr2mlahk" path="res://Assets/Images/GUI/frame2.png" id="1_ftc0d"]
[ext_resource type="Script" uid="uid://ccpls4e6ghtbn" path="res://Scenes/ShopScene/item_panel.gd" id="1_lxiu7"]
[ext_resource type="Texture2D" uid="uid://d0kdfvm8lrvx6" path="res://Assets/Images/GUI/frame1.png" id="2_ih3jf"]
[ext_resource type="Texture2D" uid="uid://2vql0uvi5hvr" path="res://Assets/Images/Icons/icon_pack1.png" id="3_tixke"]
[ext_resource type="Texture2D" uid="uid://chkdul0xtwjg" path="res://Assets/Images/GUI/frame3.png" id="4_stj07"]
[ext_resource type="Texture2D" uid="uid://bif6k76ngqhic" path="res://Assets/Images/Other/gold_icon.png" id="5_ih3jf"]
[ext_resource type="Texture2D" uid="uid://cfg0662ipf5kj" path="res://Assets/Images/SceneShop/plus_button_icon_normal.png" id="6_vjw0j"]
[ext_resource type="Texture2D" uid="uid://b4jl2wauk0qsy" path="res://Assets/Images/GUI/frame1_hover.png" id="7_3wf7t"]
[ext_resource type="Texture2D" uid="uid://bivpyv8u6nanj" path="res://Assets/Images/SceneShop/plus_button_icon_hover.png" id="7_lxiu7"]
[ext_resource type="Script" uid="uid://bhkluedefy5rg" path="res://Scripts/auto_scroll_container.gd" id="7_sd2rm"]
[ext_resource type="Texture2D" uid="uid://kxfkb32214gp" path="res://Assets/Images/SceneShop/minus_button_icon_normal.png" id="8_3wf7t"]
[ext_resource type="Texture2D" uid="uid://fith0q8c1se4" path="res://Assets/Images/SceneShop/minus_button_icon_hover.png" id="9_kjjn1"]
[ext_resource type="Texture2D" uid="uid://df5wcs0weo74f" path="res://Assets/Images/GUI/frame_6.png" id="9_sd2rm"]
[ext_resource type="Texture2D" uid="uid://c0385uy1gyjsq" path="res://Assets/Images/GUI/frame7_mask.png" id="9_ys0tx"]
[ext_resource type="Texture2D" uid="uid://dmx2v3ccts2ne" path="res://Assets/Images/Particles/simple_particle1.png" id="13_6jedc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ftc0d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gct47"]
resource_local_to_scene = true
atlas = ExtResource("3_tixke")
region = Rect2(96, 448, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r17sh"]
texture = ExtResource("9_ys0tx")
texture_margin_top = 15.0
texture_margin_bottom = 15.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ys0tx"]
texture = ExtResource("9_sd2rm")
texture_margin_top = 15.0
texture_margin_bottom = 15.0
modulate_color = Color(1, 1, 1, 0.529412)

[sub_resource type="Curve" id="Curve_sd2rm"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.29595, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0512164), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ys0tx"]
curve = SubResource("Curve_sd2rm")

[sub_resource type="Curve" id="Curve_r17sh"]
_data = [Vector2(0.0529595, 0), 0.0, 0.0, 0, 0, Vector2(0.0560748, 0.850192), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_s8ji8"]
curve = SubResource("Curve_r17sh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vafd8"]
resource_local_to_scene = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(150, 36, 1)
direction = Vector3(0, -1, 0)
spread = 63.708
initial_velocity_max = 18.65
gravity = Vector3(0, 0, 0)
damping_max = 0.62
scale_min = 0.2
scale_max = 1.2
scale_curve = SubResource("CurveTexture_s8ji8")
alpha_curve = SubResource("CurveTexture_ys0tx")

[node name="ItemPanel" type="PanelContainer"]
custom_minimum_size = Vector2(320, 0)
offset_right = 320.0
offset_bottom = 138.0
size_flags_horizontal = 3
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ftc0d")
script = ExtResource("1_lxiu7")

[node name="HiddenMeasureLabel" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 15
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -5

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="TopFrame" type="NinePatchRect" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_ftc0d")
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 7

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 5

[node name="ItemNameLabel" type="Label" parent="VBoxContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "Limon del Himalaya"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
mouse_filter = 2

[node name="MainItemFrame" type="NinePatchRect" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(270, 110)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ih3jf")
patch_margin_left = 17
patch_margin_top = 15
patch_margin_right = 17
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2

[node name="IconFrame" type="NinePatchRect" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 52)
layout_mode = 2
texture = ExtResource("1_ftc0d")
patch_margin_left = 17
patch_margin_top = 16
patch_margin_right = 17
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer/IconFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ItemIcon" type="TextureRect" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer/IconFrame/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_gct47")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 12
text = "STOCK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = -4

[node name="StockFrame" type="NinePatchRect" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 24)
layout_mode = 2
texture = ExtResource("4_stj07")
patch_margin_left = 17
patch_margin_top = 6
patch_margin_right = 17
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 14

[node name="QuantityLabel" type="Label" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = -6

[node name="MarginContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="PriceLabel" type="Label" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.921569, 0.729412, 0.254902, 1)
theme_override_constants/outline_size = 7
text = "1.300.000"
vertical_alignment = 1

[node name="GoldIcon" type="TextureRect" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_ih3jf")
expand_mode = 1
stretch_mode = 5

[node name="HasItemsLabel" type="Label" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.94365, 0.366383, 0.699787, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 14
text = "Owned: 10.000"
horizontal_alignment = 2

[node name="DescriptionAutoScrollContainer" type="Container" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(230, 59)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("7_sd2rm")

[node name="Description" type="Label" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer2/DescriptionAutoScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(230, 59)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/outline_size = 8
text = "Esto es una descripcion"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/current_size = Vector2(230, 59)
metadata/current_size_flags = {
"h": 3,
"v": 3
}
metadata/base_position = Vector2(0, 0)

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
mouse_filter = 2

[node name="CursorHover" type="NinePatchRect" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(270, 110)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("7_3wf7t")
patch_margin_left = 17
patch_margin_top = 15
patch_margin_right = 17
patch_margin_bottom = 15

[node name="SoldOutContainer" type="Control" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2

[node name="SouldOutBackground" type="NinePatchRect" parent="VBoxContainer/MarginContainer2/SoldOutContainer"]
modulate = Color(0, 0, 0, 0.556863)
custom_minimum_size = Vector2(270, 110)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("2_ih3jf")
patch_margin_left = 17
patch_margin_top = 15
patch_margin_right = 17
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2/SoldOutContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer2/SoldOutContainer/MarginContainer"]
clip_children = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_r17sh")

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer2/SoldOutContainer/MarginContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer2/SoldOutContainer/MarginContainer/PanelContainer/Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.0
offset_top = 50.0
offset_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
rotation = -0.208362
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ys0tx")

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer2/SoldOutContainer/MarginContainer/PanelContainer/Control/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="SoldOutLabel" type="Label" parent="VBoxContainer/MarginContainer2/SoldOutContainer/MarginContainer/PanelContainer/Control/PanelContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(127, 25)
theme_override_colors/font_color = Color(1, 0.23, 0.512333, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 24
text = "SOLD OUT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = -11
theme_override_constants/margin_right = 12

[node name="BuyFrame" type="NinePatchRect" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
texture = ExtResource("4_stj07")
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3/MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 6
text = "BUY:"

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer3/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
mouse_filter = 2

[node name="MinusButton" type="TextureButton" parent="VBoxContainer/MarginContainer3/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 1
mouse_filter = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_3wf7t")
texture_hover = ExtResource("9_kjjn1")

[node name="ItemsToTakeLabel" type="Label" parent="VBoxContainer/MarginContainer3/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 15
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusButton" type="TextureButton" parent="VBoxContainer/MarginContainer3/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 1
mouse_filter = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_vjw0j")
texture_hover = ExtResource("7_lxiu7")

[node name="RestockParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
z_index = 200
position = Vector2(160, 83)
emitting = false
amount = 100
texture = ExtResource("13_6jedc")
lifetime = 1.5
one_shot = true
speed_scale = 0.85
explosiveness = 0.4
randomness = 0.59
local_coords = true
process_material = SubResource("ParticleProcessMaterial_vafd8")

[connection signal="focus_entered" from="." to="." method="_on_main_item_panel_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_main_item_panel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_main_item_panel_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/MarginContainer/HBoxContainer/MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/MarginContainer/HBoxContainer/PlusButton" to="." method="_on_plus_button_pressed"]
